crates/compiler/cypress/tests/snapshots/test_parse__ability_multi_line_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "Hash implements\n    hash : a -> U64\n    hash2 : a -> U64\n\n1\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginImplements
            UpperIdent=>UpperIdent@0
            InlineAbilityImplements=>KwImplements@1
            (BeginAbilityMethod
                Ident=>LowerIdent@2
                (*
                    Ident=>LowerIdent@4
                    InlineTypeArrow=>OpArrow@5
                    TypeName=>UpperIdent@6
                EndTypeLambda)
            EndAbilityMethod)
            (BeginAbilityMethod
                Ident=>LowerIdent@7
                (*
                    Ident=>LowerIdent@9
                    InlineTypeArrow=>OpArrow@10
                    TypeName=>UpperIdent@11
                EndTypeLambda)
            EndAbilityMethod)
        EndImplements)
        HintExpr
        Num=>Int@12
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
IntBase10("1")

[=== formatted below ===]

