crates/compiler/cypress/tests/snapshots/test_parse__add_var_with_spaces_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "x + 2\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpPlus=>OpPlus@1
            Num=>Int@2
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("x"), Plus, IntBase10("2"))

[=== formatted below ===]

