crates/compiler/cypress/tests/snapshots/test_parse__ann_open_union_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "foo : [True, Perhaps Thing]*\nfoo = True\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            (*
                (BeginTypeTagUnion
                    Tag=>UpperIdent@3
                    Tag=>UpperIdent@5
                    TypeName=>UpperIdent@6
                EndTypeTagUnion)
                TypeWildcard=>OpStar@9
            EndTypeAdendum)
        EndTypeOrTypeAlias)
        (BeginAssignDecl
            Ident=>LowerIdent@10
            InlineAssign=>OpAssign@11
            UpperIdent=>UpperIdent@12
        EndAssignDecl)
        HintExpr
        Num=>Int@13
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("foo"), Adendum(TagUnion([Name("True"), Name("Perhaps"), Name("Thing")]), Wildcard))
Assign(Ident("foo"), UpperIdent("True"))
IntBase10("42")

[=== formatted below ===]

